GNOME Bugzilla – Bug 743402
Will not build on 32-bit systems
Last modified: 2015-01-23 14:41:56 UTC
While packaging Builder for Fedora, I noticed that the build failed on 32-bit systems, due to a conflict between gsize and guint64.
Created attachment 295275 [details] [review] proposed patch
Failing build log: https://kojipkgs.fedoraproject.org//work/tasks/5830/8705830/build.log
Review of attachment 295275 [details] [review]: LGTM ;)
Review of attachment 295275 [details] [review]: Thanks for the review! Pushed.