search: Fix build on 32-bit systems

Match the type in the header and source file for
gb_search_display_group_set_count() to use guint64, not a mixture of
guint64 and gsize (which is a typedef to unsigned long, and 32 bits wide
on 32-bit systems).

https://bugzilla.gnome.org/show_bug.cgi?id=743402